Sync all content

--- a/content/resources/152.md
+++ b/content/resources/152.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: fbaeb22b-365c-6309-d67e-ad7940ae7df6
 resourcetype: Image
 title: 152.png
 uid: bddf5210-20a6-2574-485c-febd5a21097e
