--- a/content/resources/mit18_600f19_final_2011.md
+++ b/content/resources/mit18_600f19_final_2011.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/bc659c10136de89015940894fcef7acf_MIT18_600F19_final_2011.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2011 18.440 Final Exam
 uid: bc659c10-136d-e890-1594-0894fcef7acf
