--- a/content/resources/mit18_600f19_final_2012.md
+++ b/content/resources/mit18_600f19_final_2012.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/2e99b45691ed97223f5ef25d2b2b1767_MIT18_600F19_final_2012.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Fall 2012 18.440 Final Exam
 uid: 2e99b456-91ed-9722-3f5e-f25d2b2b1767
