--- a/content/resources/mit18_600f19_final_2017.md
+++ b/content/resources/mit18_600f19_final_2017.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/34433526a5c745bd5882fa26027be41e_MIT18_600F19_final_2017.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2017 18.600 Final Exam
 uid: 34433526-a5c7-45bd-5882-fa26027be41e
