--- a/content/resources/mit18_600f19_final_2019.md
+++ b/content/resources/mit18_600f19_final_2019.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/da0d7ccdbb924ff27eb1da15d000fd22_MIT18_600F19_final_2019.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2019 18.600 Final Exam
 uid: da0d7ccd-bb92-4ff2-7eb1-da15d000fd22
