--- a/content/resources/mit18_600f19_final_f2019.md
+++ b/content/resources/mit18_600f19_final_f2019.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/2ec6f888273fbd3f772eb70361a66b2e_MIT18_600F19_final_F2019.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Fall 2019 18.600 Final Exam
 uid: 2ec6f888-273f-bd3f-772e-b70361a66b2e
