--- a/content/resources/mit18_600f19_lec10.md
+++ b/content/resources/mit18_600f19_lec10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/f5c595c2001a0e5527677fa6648d6c2f_MIT18_600F19_lec10.pdf
 file_type: application/pdf
+parent_uid: e01de6f1-fa18-fe29-a66a-595f81644ad7
 resourcetype: Document
 title: '18.600 F2019 Lecture 10: Variance and standard deviation'
 uid: f5c595c2-001a-0e55-2767-7fa6648d6c2f
