--- a/content/resources/mit18_600f19_lec23.md
+++ b/content/resources/mit18_600f19_lec23.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/a2714c96bf74ddfbaec7cd84fd2b3574_MIT18_600F19_lec23.pdf
 file_type: application/pdf
+parent_uid: e01de6f1-fa18-fe29-a66a-595f81644ad7
 resourcetype: Document
 title: '18.600 F2019 Lecture 23: Conditional probability, order statistics,'
 uid: a2714c96-bf74-ddfb-aec7-cd84fd2b3574
