--- a/content/resources/mit18_600f19_lec35.md
+++ b/content/resources/mit18_600f19_lec35.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/86fa169006de1487dc4e1561463b4643_MIT18_600F19_lec35.pdf
 file_type: application/pdf
+parent_uid: e01de6f1-fa18-fe29-a66a-595f81644ad7
 resourcetype: Document
 title: '18.600 F2019 Lecture 35: Martingales and risk neutral probability'
 uid: 86fa1690-06de-1487-dc4e-1561463b4643
