--- a/content/resources/mit18_600f19_lec38.md
+++ b/content/resources/mit18_600f19_lec38.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/0db69ebc69650e5313b7624486ab79e4_MIT18_600F19_lec38.pdf
 file_type: application/pdf
+parent_uid: e01de6f1-fa18-fe29-a66a-595f81644ad7
 resourcetype: Document
 title: '18.600 F2019 Lecture 37: Review for final exam II'
 uid: 0db69ebc-6965-0e53-13b7-624486ab79e4
