--- a/content/resources/mit18_600f19_lec9.md
+++ b/content/resources/mit18_600f19_lec9.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/ce85577aae7cf19082b8355bdbf55f2c_MIT18_600F19_lec9.pdf
 file_type: application/pdf
+parent_uid: e01de6f1-fa18-fe29-a66a-595f81644ad7
 resourcetype: Document
 title: '18.600 F2019 Lecture 9: Expectations of discrete random variables'
 uid: ce85577a-ae7c-f190-82b8-355bdbf55f2c
