--- a/content/resources/mit18_600f19_mid1_2012.md
+++ b/content/resources/mit18_600f19_mid1_2012.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/ae6f4359ccee9674fadd34ea6fd23c09_MIT18_600F19_mid1_2012.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Fall 2012 18.440 Midterm Exam 1
 uid: ae6f4359-ccee-9674-fadd-34ea6fd23c09
