--- a/content/resources/mit18_600f19_mid1_2014.md
+++ b/content/resources/mit18_600f19_mid1_2014.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/d88a1f88b725d3ec75144e5dd130fd55_MIT18_600F19_mid1_2014.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2014 18.440 Midterm Exam 1
 uid: d88a1f88-b725-d3ec-7514-4e5dd130fd55
