--- a/content/resources/mit18_600f19_mid1_2016.md
+++ b/content/resources/mit18_600f19_mid1_2016.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/b146bf10509052fa0881160aaa603aea_MIT18_600F19_mid1_2016.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: 'Spring 2016 18.600 Midterm Exam 1 '
 uid: b146bf10-5090-52fa-0881-160aaa603aea
