--- a/content/resources/mit18_600f19_mid1_2017.md
+++ b/content/resources/mit18_600f19_mid1_2017.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/25bb4897aed3cc4112d685e4dfbb9a7d_MIT18_600F19_mid1_2017.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2017 18.600 Midterm Exam 1
 uid: 25bb4897-aed3-cc41-12d6-85e4dfbb9a7d
