--- a/content/resources/mit18_600f19_mid1_2018.md
+++ b/content/resources/mit18_600f19_mid1_2018.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/0a4597f4544a9758f68ad1f5441f8233_MIT18_600F19_mid1_2018.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2018 18.600 Midterm Exam 1
 uid: 0a4597f4-544a-9758-f68a-d1f5441f8233
