--- a/content/resources/mit18_600f19_mid1_2018_soln.md
+++ b/content/resources/mit18_600f19_mid1_2018_soln.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/134c16cb0b85b1dd5ff8fad6383b3415_MIT18_600F19_mid1_2018_soln.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2018 18.600 Midterm Exam 1 Solutions
 uid: 134c16cb-0b85-b1dd-5ff8-fad6383b3415
