--- a/content/resources/mit18_600f19_mid1_2019_soln.md
+++ b/content/resources/mit18_600f19_mid1_2019_soln.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/043a5f241c41a11ebbae7a84acfa94d2_MIT18_600F19_mid1_2019_soln.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2019 18.600 Midterm Exam 1 Solutions
 uid: 043a5f24-1c41-a11e-bbae-7a84acfa94d2
