--- a/content/resources/mit18_600f19_mid1_f2011.md
+++ b/content/resources/mit18_600f19_mid1_f2011.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/1419e4cab0601d2723040c9b58427a79_MIT18_600F19_mid1_F2011.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Fall 2011 18.440 Midterm Exam 1
 uid: 1419e4ca-b060-1d27-2304-0c9b58427a79
