--- a/content/resources/mit18_600f19_mid1_s2011_soln.md
+++ b/content/resources/mit18_600f19_mid1_s2011_soln.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/61394f8d49ead2d89ee46e87b07a5a14_MIT18_600F19_mid1_S2011_soln.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2011 18.440 Midterm Exam 1 Solutions
 uid: 61394f8d-49ea-d2d8-9ee4-6e87b07a5a14
