--- a/content/resources/mit18_600f19_mid2_2012_soln.md
+++ b/content/resources/mit18_600f19_mid2_2012_soln.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/b6a1cc0ccaf9dd51b8c2c9252b07ee15_MIT18_600F19_mid2_2012_soln.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Fall 2012 18.440 Midterm Exam 2 Solutions
 uid: b6a1cc0c-caf9-dd51-b8c2-c9252b07ee15
