--- a/content/resources/mit18_600f19_mid2_2016.md
+++ b/content/resources/mit18_600f19_mid2_2016.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/5b3e8a3394ce88b31bd0c4ef692d10d4_MIT18_600F19_mid2_2016.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2016 18.600 Midterm Exam 2
 uid: 5b3e8a33-94ce-88b3-1bd0-c4ef692d10d4
