--- a/content/resources/mit18_600f19_mid2_2017.md
+++ b/content/resources/mit18_600f19_mid2_2017.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/6765619f153c4589456e2be97f4d7428_MIT18_600F19_mid2_2017.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: 'Spring 2017 18.600 Midterm Exam 2 '
 uid: 6765619f-153c-4589-456e-2be97f4d7428
