--- a/content/resources/mit18_600f19_mid2_2017_soln.md
+++ b/content/resources/mit18_600f19_mid2_2017_soln.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/e860fbe9a11e7288769a515508868f26_MIT18_600F19_mid2_2017_soln.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2017 18.600 Midterm Exam 2 Solutions
 uid: e860fbe9-a11e-7288-769a-515508868f26
