--- a/content/resources/mit18_600f19_mid2_2018.md
+++ b/content/resources/mit18_600f19_mid2_2018.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/3d27502e3dc9bc8ed0998a0dab20bc8c_MIT18_600F19_mid2_2018.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2018 18.600 Midterm Exam 2
 uid: 3d27502e-3dc9-bc8e-d099-8a0dab20bc8c
