--- a/content/resources/mit18_600f19_mid2_2018_soln.md
+++ b/content/resources/mit18_600f19_mid2_2018_soln.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/66fc9975b97b20bf240da43e215af204_MIT18_600F19_mid2_2018_soln.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2018 18.600 Midterm Exam 2 Solutions
 uid: 66fc9975-b97b-20bf-240d-a43e215af204
