--- a/content/resources/mit18_600f19_mid2_2019.md
+++ b/content/resources/mit18_600f19_mid2_2019.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/74351a9e22145fe44d7e19b887f9ac9b_MIT18_600F19_mid2_2019.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2019 18.600 Midterm Exam 2
 uid: 74351a9e-2214-5fe4-4d7e-19b887f9ac9b
