--- a/content/resources/mit18_600f19_mid2_f2011.md
+++ b/content/resources/mit18_600f19_mid2_f2011.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/b0248a3efdb53bc139cc39166f82831b_MIT18_600F19_mid2_F2011.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Fall 2011 18.440 Midterm Exam 2 with Solutions
 uid: b0248a3e-fdb5-3bc1-39cc-39166f82831b
