--- a/content/resources/mit18_600f19_mid2_s2011.md
+++ b/content/resources/mit18_600f19_mid2_s2011.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/d10f16b927468fba98f10cd3989d848a_MIT18_600F19_mid2_S2011.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2011 18.440 Midterm Exam 2
 uid: d10f16b9-2746-8fba-98f1-0cd3989d848a
