--- a/content/resources/mit18_600f19_mid2_s2011_soln.md
+++ b/content/resources/mit18_600f19_mid2_s2011_soln.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/f560edd88f04ca2f14b0f6ee07982d33_MIT18_600F19_mid2_S2011_soln.pdf
 file_type: application/pdf
+parent_uid: 404e31ed-65f7-9ae3-39b0-66e31da833f7
 resourcetype: Document
 title: Spring 2011 18.440 Midterm Exam 2 Solutions
 uid: f560edd8-8f04-ca2f-14b0-f6ee07982d33
