--- a/content/resources/mit18_600f19_pset10.md
+++ b/content/resources/mit18_600f19_pset10.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/a871592b3ecfd80f3c67bd7b3cb4fd22_MIT18_600F19_Pset10.pdf
 file_type: application/pdf
+parent_uid: 094b223d-dec4-382c-8969-c5c3f5977ca5
 resourcetype: Document
 title: 18.600 Probability and Random Variables F2019, Problem Set 10
 uid: a871592b-3ecf-d80f-3c67-bd7b3cb4fd22
