--- a/content/resources/mit18_600f19_pset2.md
+++ b/content/resources/mit18_600f19_pset2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/8065300455c8beaf97ba4886c47b1e74_MIT18_600F19_Pset2.pdf
 file_type: application/pdf
+parent_uid: 094b223d-dec4-382c-8969-c5c3f5977ca5
 resourcetype: Document
 title: 18.600 Probability and Random Variables F2019, Problem Set 2
 uid: 80653004-55c8-beaf-97ba-4886c47b1e74
