--- a/content/resources/mit18_600f19_pset3.md
+++ b/content/resources/mit18_600f19_pset3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/d2a8c32daab8dde0da6633a752690102_MIT18_600F19_Pset3.pdf
 file_type: application/pdf
+parent_uid: 094b223d-dec4-382c-8969-c5c3f5977ca5
 resourcetype: Document
 title: 18.600 Probability and Random Variables F2019, Problem Set 3
 uid: d2a8c32d-aab8-dde0-da66-33a752690102
