--- a/content/resources/mit18_600f19_pset6.md
+++ b/content/resources/mit18_600f19_pset6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/325e058daf9db03b93495881e83876e6_MIT18_600F19_Pset6.pdf
 file_type: application/pdf
+parent_uid: 094b223d-dec4-382c-8969-c5c3f5977ca5
 resourcetype: Document
 title: 18.600 Probability and Random Variables F2019, Problem Set 6
 uid: 325e058d-af9d-b03b-9349-5881e83876e6
