--- a/content/resources/mit18_600f19_pset7.md
+++ b/content/resources/mit18_600f19_pset7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/d6eb17d628d130761295a530f159b440_MIT18_600F19_Pset7.pdf
 file_type: application/pdf
+parent_uid: 094b223d-dec4-382c-8969-c5c3f5977ca5
 resourcetype: Document
 title: 18.600 Probability and Random Variables F2019, Problem Set 7
 uid: d6eb17d6-28d1-3076-1295-a530f159b440
