--- a/content/resources/mit18_600f19_pset9.md
+++ b/content/resources/mit18_600f19_pset9.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-600-probability-and-random-variables-fall-2019/56c7b74babc1e33346864722ead29a2e_MIT18_600F19_Pset9.pdf
 file_type: application/pdf
+parent_uid: 094b223d-dec4-382c-8969-c5c3f5977ca5
 resourcetype: Document
 title: 18.600 Probability and Random Variables F2019, Problem Set 9
 uid: 56c7b74b-abc1-e333-4686-4722ead29a2e
